<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorgradient"
                    android:paddingTop="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/login" />


                <RelativeLayout
                    android:id="@+id/rlnotif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toolbar"
                    android:background="@color/red"
                    android:visibility="gone">

                    <customfonts.TextViewSFProDisplayRegular
                        android:id="@+id/textnotif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="10dp"
                        android:textColor="@color/white" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="235dp"
                    android:layout_marginRight="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@drawable/round_edittext_background">

                                <customfonts.TextViewSFProDisplayMedium
                                    android:id="@+id/countrycode"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="+62"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="15dp" />

                                <View
                                    android:layout_width="0.1dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_toRightOf="@+id/countrycode"
                                    android:background="@color/dark_gray" />

                                <customfonts.EditTextSFProDisplayRegular
                                    android:id="@+id/phonenumber"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:layout_toRightOf="@+id/countrycode"
                                    android:background="@color/transparent"
                                    android:hint="@string/hint_phone"
                                    android:inputType="phone"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/gray"
                                    android:textSize="15dp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/round_edittext_background">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="15dp"
                                    android:layout_centerVertical="true"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_lock"
                                    android:tint="@color/black" />

                                <View
                                    android:layout_width="0.1dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_toRightOf="@+id/countrycode"
                                    android:background="@color/dark_gray" />

                                <customfonts.EditTextSFProDisplayRegular
                                    android:id="@+id/password"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:layout_toRightOf="@+id/countrycode"
                                    android:background="@color/transparent"
                                    android:hint="Password"
                                    android:inputType="textPassword"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/gray"
                                    android:textSize="15dp" />

                            </LinearLayout>

                            <customfonts.TextViewSFProDisplayMedium
                                android:id="@+id/lupapass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="10dp"
                                android:gravity="center"
                                android:text="@string/lupa"
                                android:textColor="@color/colorgradient"
                                android:textSize="14dp" />

                            <customfonts.Button_SF_Pro_Display_Medium
                                android:id="@+id/buttonlogin"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/button_round_1"
                                android:text="@string/button_signIn"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="18dp" />

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true">

                                <customfonts.TextViewSFProDisplayRegular
                                    android:id="@+id/privacypolice"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="15dp"
                                    android:gravity="center"
                                    android:lineSpacingExtra="5dp"
                                    android:textColor="@color/black"
                                    android:textSize="14dp" />
                            </RelativeLayout>


                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>


            </RelativeLayout>
        </ScrollView>

        <include layout="@layout/verifycode" />


    </ViewFlipper>

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_edittext_background"
        android:padding="10dp"
        android:src="@drawable/ic_back"
        android:tint="@color/black" />

    <RelativeLayout
        android:id="@+id/rldaftar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center">

        <customfonts.TextViewSFProDisplayRegular
            android:id="@+id/textdaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/button_dontHaveAccount"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <customfonts.TextViewSFProDisplayMedium
            android:id="@+id/clickdaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/textdaftar"
            android:text="@string/button_signUp"
            android:textAlignment="center"
            android:textColor="@color/colorgradient"
            android:textSize="18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlprogress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentblack"
        android:clickable="true"
        android:visibility="gone">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@color/white" />


        <ProgressBar
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/lllogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="10dp"
                android:src="@drawable/logo" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
