<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorgradient"
                    android:paddingTop="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/verify" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="235dp"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/codelayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <customfonts.EditTextSFProDisplayMedium
                            android:id="@+id/numone"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_edittext_background"
                            android:ems="1"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25sp" />

                        <customfonts.EditTextSFProDisplayMedium
                            android:id="@+id/numtwo"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_edittext_background"
                            android:ems="1"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25sp" />

                        <customfonts.EditTextSFProDisplayMedium
                            android:id="@+id/numthree"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_edittext_background"
                            android:ems="1"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25sp" />

                        <customfonts.EditTextSFProDisplayMedium
                            android:id="@+id/numfour"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_edittext_background"
                            android:ems="1"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25sp" />

                        <customfonts.EditTextSFProDisplayMedium
                            android:id="@+id/numfive"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_edittext_background"
                            android:ems="1"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25sp" />

                        <customfonts.EditTextSFProDisplayMedium
                            android:id="@+id/numsix"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_edittext_background"
                            android:ems="1"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25sp" />

                    </LinearLayout>

                    <customfonts.Button_SF_Pro_Display_Medium
                        android:id="@+id/buttonconfirm"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/button_round_1"
                        android:text="@string/confirm"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <customfonts.TextViewSFProDisplayRegular
                        android:id="@+id/sendtotxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        android:visibility="visible" />

                    <customfonts.TextViewSFProDisplayRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/norecieve"
                        android:textColor="@color/black"
                        android:textSize="15dp" />


                    <customfonts.TextViewSFProDisplayMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="60dp"
                        android:onClick="resendCode"
                        android:text="@string/resend"
                        android:textColor="@color/parentcolor"
                        android:textSize="18dp" />

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

        <ImageView
            android:id="@+id/back_btn_verify"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_edittext_background"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            android:tint="@color/black" />

        <RelativeLayout
            android:id="@+id/rlnotif2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:visibility="gone">

            <customfonts.TextViewSFProDisplayRegular
                android:id="@+id/textnotif2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:textColor="@color/white" />

        </RelativeLayout>
    </RelativeLayout>



</RelativeLayout>
